[package]
name = "rust_lisp_interop"
version = "0.1.0"
authors = ["Luiz Alberto do Carmo Viana <luizalbertocviana@gmail.com>"]
edition = "2018"

[lib]
name = "rust_lisp_interop"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
